syntax = "proto3";

package go.micro.srv.inventorys;

service I {
    rpc Shell(Request) returns (Response) {}
    rpc Confim(Request) returns (Response) {}
}

message Error {
    int32 code = 1;
    string detail = 2;
}

message Inv {
    int64 id = 1;
    int64 bookId = 2;
    int64 unitPrice = 3;
    int64 stock = 4;
    int64 createdTime = 6;
    int64 updatedTime = 7;
}

message Request {
    int64 bookId = 1;
    int64 bookname = 2;
    int64 bookprice = 3;
    int64 bookuseid = 4;
}

message Response {
    bool success = 1;
    Error error = 2;
    Inv inv = 3;
}
